Fixed - Mini cart View and Edit Cart link not in alignment issue

--- a/app/design/frontend/Magento/blank/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/blank/Magento_Checkout/web/css/source/module/_minicart.less
@@ -71,7 +71,7 @@
 
         .block-content {
             > .actions {
-                margin-top: 15px;
+                margin-top: 20px;
                 text-align: center;
 
                 > .primary {
@@ -125,7 +125,7 @@
         float: right;
 
         .block-minicart {
-            .lib-css(padding, 25px @minicart__padding-horizontal);
+            .lib-css(padding, 20px @minicart__padding-horizontal);
 
             .block-title {
                 display: none;
