--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -78,7 +78,7 @@
 
         .block-content {
             > .actions {
-                margin-top: 15px;
+                margin-top: 20px;
 
                 > .secondary {
                     text-align: center;
@@ -135,7 +135,7 @@
         float: right;
 
         .block-minicart {
-            .lib-css(padding, 25px @minicart__padding-horizontal);
+            .lib-css(padding, 20px @minicart__padding-horizontal);
 
             .block-title {
                 display: none;
